Fix menu scrolling on mobile

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -862,6 +862,11 @@ span.warning.light {
     }
 }
 
+.full-menu {
+    height: 100%;
+    overflow-x: hidden;
+}
+
 #intro {
     position: relative;
     z-index: 10;
